# lightstore

./: .env.example  .gitignore  BDD_TESTS_COMPLETE.md  CLAUDE.md  Makefile  SPEC.md  docker-compose.yaml  docker-compose.yml  pom.xml
.claude/: settings.local.json
.claude/skills/bdd-godog/: SKILL.md
.claude/skills/bdd-godog/references/: practical-examples.md
.claude/skills/ddd-golang/: SKILL.md
.claude/skills/ddd-golang/references/: ddd-patterns.md  testing-patterns.md
.github/workflows/: bdd-tests.yml
deploy/k8s/: namespace.yaml  postgres.yaml  server.yaml
docs/: cvat.md  hardware-setup.md  parts-list.md
firmware/: platformio.ini
firmware/src/: calibration.cpp.example  main.cpp
ml/: Dockerfile  Dockerfile.dev  Dockerfile.train  Makefile  docker-compose.yml  pyproject.toml  requirements-train.txt  requirements.txt
ml/proto/: detection.proto
ml/scripts/: cvat_export.py  prepare_dataset.py  sync_classes.py
ml/server/app/: __init__.py  config.py  detector.py  main.py  servicer.py
ml/server/tests/: __init__.py  test_detector.py
ml/training/configs/: beverages.yaml
ml/training/notebooks/: exploration.ipynb
ml/training/scripts/: export.py  train.py  validate.py
scripts/db/: pgadmin-servers.json
scripts/db/init/: 01-extensions.sql
server/: .air.toml  Dockerfile  Dockerfile.dev  go.mod  go.sum
server/cmd/server/: main.go
server/features/catalog/: manage_skus.feature
server/features/device/: device_management.feature
server/features/transaction/: shopping_session.feature
server/internal/application/createsku/: command.go  handler.go
server/internal/application/ports/: event_publisher.go  ml_service.go
server/internal/application/registerdevice/: command.go  handler.go
server/internal/application/startsession/: command.go  handler.go
server/internal/application/submitdetection/: command.go  handler.go
server/internal/catalog/api/: reader.go
server/internal/catalog/app/: create_sku.go  queries.go
server/internal/catalog/domain/: errors.go  events.go  repository.go  sku.go
server/internal/catalog/infra/: http_handler.go  postgres_repo.go  routes.go
server/internal/device/api/: reader.go
server/internal/device/app/: queries.go  register_device.go
server/internal/device/domain/: device.go  errors.go  events.go  repository.go
server/internal/device/infra/: http_handler.go  postgres_repo.go  routes.go
server/internal/domain/device/: aggregate.go  errors.go  events.go  (+1 more)
server/test/: ARCHITECTURE.md  BDD_TESTING.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  bdd_test.go  catalog_steps.go  common_steps.go  device_steps.go  setup-test-db.sh  transaction_steps.go
server/test/support/: test_context.go  test_server.go
src/main/resources/: application-mysql.properties  application.properties
(+75 files in other folders)
