[tool.poetry]
name = "vending-ml"
version = "0.1.0"
description = "ML Detection Server for Vending Machine"
authors = ["Vending Machine Team"]
readme = "README.md"
packages = [{include = "app", from = "server"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core ML
ultralytics = ">=8.1.0"
torch = ">=2.1.0"
torchvision = ">=0.16.0"
# gRPC
grpcio = ">=1.60.0"
grpcio-tools = ">=1.60.0"
protobuf = ">=4.25.0"
# Image processing
Pillow = ">=10.0.0"
numpy = ">=1.24.0"
opencv-python-headless = ">=4.8.0"
# HTTP client
requests = ">=2.31.0"
# Configuration
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.12.0"
ruff = ">=0.1.0"
mypy = ">=1.8.0"
watchdog = {extras = ["watchmedo"], version = ">=3.0.0"}
debugpy = ">=1.8.0"

[tool.poetry.group.train.dependencies]
mlflow = ">=2.10.0"
tensorboard = ">=2.15.0"
pandas = ">=2.1.0"
matplotlib = ">=3.8.0"
seaborn = ">=0.13.0"
jupyterlab = ">=4.0.0"
ipywidgets = ">=8.1.0"
albumentations = ">=1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["server/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
